# spacerocks

./: .gitattributes  .gitignore  Cargo.toml  Ceres.ipynb  MANIFEST  MANIFEST.in  MPC-Class.ipynb  OrbitFitting.ipynb  PrototypeMPChecker.ipynb  README.md  SpaceRocks.py  SpaceRocksTutorial.ipynb  SpaceRocks_Tutorial.ipynb  Untitled.ipynb  __init__.py  angles.py  dates.py  dockerfile  environment.yml  linalg3d.py  pyproject.toml  requirements.txt  setup.py  spacerocks.py  test_spacerocks.py
.github/workflows/: spacerocks_tests.yml
PyOrbfit/: aeiderivs.py  orbit_functions.py
docs/: CHANGELOG.md  Ephemerides.md  SpaceRock.md  Units.md  coordinate-frame.md  index.md  index.rst  origin.md  spacerock.md  units.md
lost-and-found/: euler_cromer.rs  ias15.c  rk4.rs  simulation-old.rs  t-spacerock.rs
lost-and-found/integrators/: leapfrog.rs  mod.rs
lost-and-found/nbody-old/: acceleration.rs  freezer.rs  rk4.rs  simulation.rs
lost-and-found/nnnspacerock/: mod.rs  spacerock.rs
notebooks/: 2015 BP519.ipynb  Borisov.ipynb  Ceres.ipynb  NaturalSatellites.ipynb  OrbitFitting.ipynb  RotationCurves.ipynb  Simulation.ipynb  Valjean.ipynb  dev.ipynb  from_mpc_analytic_propagate.ipynb  generate-trojans.ipynb  kozai-hamiltonian.ipynb  mercury-precession.ipynb  mpchecker.ipynb  nbody.ipynb  observing.ipynb  orbit-fitting.ipynb  pluto_and_jo.ipynb  rotation-curve.ipynb  spice.ipynb  time.ipynb  transforms.ipynb
notebooks/.ipynb_checkpoints/: Ceres-checkpoint.ipynb
notebooks/tutorial/: 001.ipynb  002.ipynb  index.md  origin.ipynb  problem-001.ipynb  problem-002.ipynb
py-bindings/: Cargo.toml  README.md  pyproject.toml
py-bindings/src/: lib.rs
py-bindings/src/nbody/: integrator.rs  integrators.rs  mod.rs  simulation.rs
py-bindings/src/observer/: mod.rs  observatory.rs
py-bindings/src/observing/: detection.rs  detectioncatalog.rs  mod.rs  observatory.rs  observer.rs
py-bindings/src/orbfit/: gauss.rs
py-bindings/src/spacerock/: mod.rs  rockcollection.rs  spacerock.rs
py-bindings/src/spice/: mod.rs  spicekernel.rs
py-bindings/src/time/: mod.rs  time.rs
py-bindings/src/transforms/: calc_E_from_M.rs  calc_E_from_f.rs  calc_M_from_E.rs  mod.rs
py-spacerocks/: Cargo.toml  pyproject.toml
py-spacerocks/src/: lib.rs
py-spacerocks/src/nbody/: force.rs  mod.rs  simulation.rs
py-spacerocks/src/observing/: detection.rs  detectioncatalog.rs  observatory.rs  observer.rs
py-spacerocks/src/py_nbody/: integrator.rs  mod.rs  simulation.rs
py-spacerocks/src/py_observing/: detection.rs  detectioncatalog.rs  observatory.rs  observer.rs
py-spacerocks/src/py_orbfit/: gauss.rs
py-spacerocks/src/py_spacerock/: coordinate_frame.rs  mod.rs  origin.rs  rockcollection.rs  spacerock.rs
py-spacerocks/src/py_time/: time.rs
py-spacerocks/src/py_transforms/: calc_f_from_E.rs  mod.rs
py-spacerocks/src/spacerock/: rockcollection.rs  spacerock.rs
py-spacerocks/src/spice/: spicekernel.rs
py-spacerocks/src/time/: time.rs
py-spacerocks/src/transforms/: calc_M_from_E.rs
simulator/: sim_funcs.py  simulator.py
spacerocks/: .coverage  Orbfit.py  Untitled.ipynb  __init__.py  calc_E.jl  cbindings.py  constants.py  convenience.py  covsrt.jl  detections.py  downloader.py  ephemerides.py  frames.py  gauss.py  gaussj.jl  jacobians.nb  jacobians.py  julia_calcE_test.ipynb  keplerorbit.py  linalg3d.py  linking.py  model.py  mpc.py  mpchecker.py  observatory.py  observatory_json_to_csv.py  observe.py  observer.py  observer_new.py  observer_old.py  orbfit.py  orbitfit.py  orbitfuncs.py  orbitsppmasses.py  paths.py  planets.py  prediction.py  propagate.py  pyOrbfit.py  simulation.py  (+9 more)
spacerocks/data/: __init__.py  observatories.csv  spice-test.txt
spacerocks/durin/: __init__.py  grid.py  image.py  sequence.py
spacerocks/dynamics/: classifier.py
spacerocks/linking/: catalog.py  detection.py  gauss.py  link.py  linking.py  streak.py
spacerocks/orbfit/: detection.py  fitter.py
spacerocks/orbitfitting/: fitter.py
spacerocks/pyOrbfit/: __init__.py  orbfit.py  pyOrbfit.py
spacerocks/pyorbfit/: orbfit.py  prediction.py
spacerocks/src/: a.out  test.cpp
spacerocks/survey/: efficiency.py
spacerocks/test/: test_spacerock.py  test_units.py  test_vector.py
spacerocks/tests/: caju_horizons  test_spacerocks.py
spacerocks/time/: time.py  utils.py
src/: aeiderivs.c  astrometry.rs  constants.rs  detection.rs  ephem_earth.c  ephem_types.h  hststuff2.c  hststuff3.c  keplerorbit.rs  lib.rs  main.rs  nrutil.h  observatory.rs  orbfit1.c  planner.c  predict.c  properties.rs  pyOrbfit.i  ran1.c  rockcollection.rs  scatter.c  spacerock.rs  speedy.c  speedy.cpp  sphericalstate.rs  statevector.rs
src/constants/: constants.rs  mod.rs  observatories.rs
src/nbody/: acceleration.rs  freezer.rs  integrator.rs  integrators.rs  mod.rs  (+5 more)
test/: test_spacerocks.py
(+130 files in other folders)
