[package]
name = "spacerocks"
version = "0.1.4"
edition = "2021"
authors = ["Kevin Napier"]
description = "Software for solar system calculations."
repository = "https://github.com/kjnapier/spacerocks"
license = "GPL-3.0"
include = ["/src"]


[dependencies]
nalgebra = "0.32.2"
rust-spice = "0.7.4"

lazy_static = "1.4.0"
phf = {version = "*", features = ["macros"]}


reqwest = { version = "0.11.4", features = ["json", "blocking"] }

rayon = "1.5.1"
indicatif = "0.16.2"
chrono = "0.4.19"
rand = "0.8.5"

serde_json = "1.0.68"
serde = { version = "*", features = ["derive"] }


# argmin = { git = "https://github.com/argmin-rs/argmin" }
# argmin-math = { git = "https://github.com/argmin-rs/argmin", features = ["nalgebra_latest-serde"] }

rand_distr = "0.4.0"


[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]