[package]
name = "spacerocks"
version = "0.1.5"
edition = "2021"
authors = ["Kevin Napier"]
description = "Software for solar system calculations."
repository = "https://github.com/kjnapier/spacerocks"
license = "GPL-3.0"
include = ["/src"]


[dependencies]
nalgebra = "0.32.2"
lazy_static = "1.4.0"
phf = {version = "0.11.2", features = ["macros"]}
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
rayon = "1.9"
indicatif = "0.16.2"
chrono = "0.4.19"
rand = "0.8.5"
serde_json = "1.0.68"
serde = { version = "1.0.197", features = ["derive", "rc"]}
rand_distr = "0.4.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[target.'x86_64-unknown-linux-gnu'.dependencies]
rust-spice = {version = "0.7.4", default-features = false, features = ["noclang"] }

# target macos
[target.'x86_64-apple-darwin'.dependencies]
rust-spice = {version = "0.7.4"}

# target mac m1
[target.'aarch64-apple-darwin'.dependencies]
rust-spice = {version = "0.7.4"}

# target aarch raspberry pi
[target.'aarh64-unknown-linux-gnu'.dependencies]
rust-spice = {version = "0.7.4", default-features = false, features = ["noclang"] }

# target arm raspberry pi
[target.'arm-unknown-linux-gnueabihf'.dependencies]
rust-spice = {version = "0.7.4", default-features = false, features = ["noclang"] }

# target windows
[target.'x86_64-pc-windows-msvc'.dependencies]
rust-spice = {version = "0.7.4"}
