[package]
name = "spacerocks"
version = "3.0.0-alpha.0"
edition = "2021"

[lib]
name = "spacerocks"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde_json = "1.0.68"
chrono = "0.4.19"
lazy_static = "1.4.0"
tabled = "0.15.0"
nalgebra = "*"

# need spacerocks
spacerocks = { path = "../" }


[dependencies.pyo3]
version = "*"
features = ["extension-module"]